Implemented 'check' button

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -47,7 +47,13 @@
   align-items: center;
   gap: 80px;
 }
-
+.to-do-list-item-completed{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 80px;
+  color: green;
+}
 .items{
   width: 500px;
 }
